# visual-tactile-localization

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  FilterCommand.cpp  fakePointCloud.cpp  filterCommand.cpp  filterData.cpp  fwd_kin_ext.cpp  localizer-module.cpp  localizer-motion.cpp  localizer.cpp  main-rec.cpp  main.cpp  motionGenerator.cpp  scalingSeries.cpp  unscentedParticleFilter-rec.cpp  unscentedParticleFilter.cpp
src/camera-library/: CMakeLists.txt
src/camera-library/include/: Camera.h  CameraParameters.h  RealsenseCamera.h  YCBVideoCamera.h  YCBVideoCameraNRT.h  iCubCamera.h
src/camera-library/src/: Camera.cpp  RealsenseCamera.cpp  YCBVideoCamera.cpp  YCBVideoCameraNRT.cpp  iCubCamera.cpp
src/gaze-ctrl-library/: CMakeLists.txt
src/gaze-ctrl-library/include/: GazeController.h
src/gaze-ctrl-library/src/: GazeController.cpp
src/icub-fingers-encoders/: CMakeLists.txt
src/icub-fingers-encoders/include/: iCubFingersEncoders.h
src/icub-fingers-encoders/src/: iCubFingersEncoders.cpp
src/object-tracking/: CMakeLists.txt
src/object-tracking-depth/: CMakeLists.txt
src/object-tracking-depth/conf/: config.ini
src/object-tracking-depth/src/: depth.cpp
src/object-tracking-ground-truth/: CMakeLists.txt
src/object-tracking-ground-truth/conf/: config.ini  marker_offsets.ini
src/object-tracking-ground-truth/include/: ArucoMeasurement.h  ArucoTracker.h  Correction.h  KinematicModel.h
src/object-tracking-ground-truth/src/: ArucoMeasurement.cpp  ArucoTracker.cpp  Correction.cpp  GaussianFilter_.cpp  KinematicModel.cpp  main.cpp
src/object-tracking-ground-truth/thrift/: arucotracker.thrift
src/object-tracking-logger/: CMakeLists.txt
src/object-tracking-logger/conf/: config.ini
src/object-tracking-logger/include/: Logger.h
src/object-tracking-logger/scripts/: plot.py  plot_err.py  plot_err_v.py  plot_v.py
src/object-tracking-logger/src/: Logger.cpp  main.cpp
src/object-tracking-logger/thrift/: logger.thrift
src/object-tracking-manipulation/: CMakeLists.txt
src/object-tracking-manipulation/conf/: hand_sequences.ini  manipulation_config.ini  object_helper_config.ini  springy_calibration_left.ini  springy_calibration_right.ini
src/object-tracking-manipulation/include/: ArmController.h  LemniscateGenerator.h  ObjectHelper.h  SinusoidalTrajectory.h  TrajectoryGenerator.h
src/object-tracking-manipulation/src/: ArmController.cpp  LemniscateGenerator.cpp  ObjectHelper.cpp  SinusoidalTrajectory.cpp  main.cpp
src/object-tracking-manipulation/thrift/: objecttrackingmanipulation.thrift
src/object-tracking-playback/: CMakeLists.txt
src/object-tracking-playback/include/: Viewer.h
src/object-tracking-playback/script/: plot.py  plot_real.py  plot_velocities.py  plot_velocities_real.py  reset  show  show_robot  show_simulation
src/object-tracking-playback/src/: Viewer.cpp  main.cpp
src/object-tracking-viewer/: CMakeLists.txt
src/object-tracking-viewer/conf/: config.ini
src/object-tracking-viewer/include/: Viewer.h  VtkMesh.h  VtkiCubHand.h  iCubArmModel.h
src/object-tracking-viewer/script/: show
src/object-tracking-viewer/src/: Viewer.cpp  VtkMesh.cpp  VtkiCubHand.cpp  iCubArmModel.cpp  main.cpp
src/object-tracking-viewer/thrift/: viewer.thrift
src/object-tracking/conf/: analogs_configuration.ini  config.ini  config_icub_320_240.ini  config_mask_320_240.ini  config_mask_320_240.ini.bak  config_mask_640_480.ini  config_realsense_320_240.ini  config_simulation.ini  config_ycbvideo.ini  config_ycbvideonrt.ini  icub_camera_config.ini  realsense_camera_config.ini  sfm_config.ini  springy_calibration_left.ini  springy_calibration_right.ini  ycbvideo_camera_config.ini
src/object-tracking/include/: BoundingBoxEstimator.h  BoundingBoxSegmentation.h  ContactDetection.h  Correction.h  DiscreteKinematicModel.h  DiscretizedKinematicModel.h  DiscretizedKinematicModelTDD.h  Filter.h  GaussianFilter_.h  InHandObjectSegmentation.h  InitParticles.h  InitParticlesGroundTruth.h  KinematicModel.h  LocalizeSuperquadricSampler.h  MaskSegmentation.h  MeshImporter.h  MeshModel.h  NanoflannPointCloudPrediction.h  ObjectMeasurements.h  ObjectMeshSampler.h  ObjectOcclusion.h  ObjectPointCloudPrediction.h  ObjectRenderer.h  ObjectSampler.h  PFilter.h  ParticlesCorrection.h  PointCloudAdaptor.h  PointCloudDumper.h  PointCloudModel.h  PointCloudPrediction.h  PointCloudSegmentation.h  ProximityLikelihood.h  Random3DPose.h  RateStabilizer.h  SimulatedFilter.h  SimulatedPointCloud.h  SuperquadricSampler.h  VCGTriMesh.h  Validator2D.h  iCubArmModel.h  (+9 more)
src/object-tracking/shader/: shader_background.frag  shader_background.vert  shader_frame.frag  shader_frame.vert  shader_model.frag  shader_model.vert
src/object-tracking/src/: BoundingBoxEstimator.cpp  BoundingBoxSegmentation.cpp  Correction.cpp  DiscreteKinematicModel.cpp  DiscretizedKinematicModel.cpp  DiscretizedKinematicModelTDD.cpp  Filter.cpp  GaussianFilter_.cpp  InHandObjectSegmentation.cpp  InitParticles.cpp  InitParticlesGroundTruth.cpp  KinematicModel.cpp  LocalizeSuperquadricSampler.cpp  MaskSegmentation.cpp  MeshImporter.cpp  NanoflannPointCloudPrediction.cpp  ObjectMeasurements.cpp  ObjectMeshSampler.cpp  ObjectOcclusion.cpp  ObjectPointCloudPrediction.cpp  ObjectRenderer.cpp  ObjectSampler.cpp  PFilter.cpp  ParticlesCorrection.cpp  PointCloudDumper.cpp  PointCloudModel.cpp  PointCloudSegmentation.cpp  ProximityLikelihood.cpp  Random3DPose.cpp  RateStabilizer.cpp  SUKFCorrectionAlt.cpp  SimulatedFilter.cpp  SimulatedPointCloud.cpp  SuperquadricSampler.cpp  Validator2D.cpp  iCubArmModel.cpp  iCubHandContactsModel.cpp  iCubHandOcclusion.cpp  iCubObjectMeasurements.cpp  iCubPointCloud.cpp  (+3 more)
src/sfm-library/: CMakeLists.txt
src/validation/: CMakeLists.txt  validate_002_master_chef.sh  validate_005_tomato_soup_can.sh  validate_006_mustard_bottle.sh  validate_008_pudding_box.sh  validate_010_potted_meat_can.sh  validate_019_pitcher_base.sh  validate_021_bleach_cleanser.sh  validate_025_mug.sh  validate_035_power_drill.sh  validate_040_large_marker.sh  validate_061_foam_brick.sh
(+199 files in other folders)
